Fixed issue with icon/description not centering on mobile

--- a/assets/css/custom-style.css
+++ b/assets/css/custom-style.css
@@ -86,6 +86,7 @@ p {
 .mf-center {
     margin: 0 auto;
     display: flex;
+    justify-content: center;
 }
 
 .display {
